# actix-web-tasks

./: .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: extensions.rs  lib.rs  m20250406_134427_create_tasks_table.rs
src/: main.rs  server.rs
src/application/: check_health.rs
src/domain/health/: service.rs
src/dto/: mod.rs  system_health_dto.rs
src/infrastructure/db/: connection.rs
src/routes/: health.rs  mod.rs
