[package]
name = "actix-web-tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
